Drop Java-1.8 support, add Java-17.