@@ -21,42 +21,67 @@ configurations {
     javadocTaglets
 }
 
-dependencies {
-    javadocTaglets "org.jdrupes.taglets:plantuml-taglet:1.0.+"
-    // javadocTaglets "com.github.mnlipp:jdrupes-taglets:master-SNAPSHOT"
+configurations {
+    markdownDoclet
+    javadocTaglets
 }
 
-javadoc {
+dependencies {
+    markdownDoclet "org.jdrupes.mdoclet:doclet:2.0.0"
+    javadocTaglets "org.jdrupes.taglets:plantuml-taglet:2.0.0"
+}
+
+task java11doc(type: JavaExec) {
+    // Does not work on JitPack, no /usr/bin/dot
+    enabled = !isJitPackBuild
+
     // Make sure that other projects' compileClasspaths are resolved
     rootProject.subprojects
         .findAll({project -> project.name.startsWith("org.jgrapes") &&
             project.name != "org.jgrapes.core"})
         .each{project -> dependsOn project.tasks.assemble}
-
-    // Does not work on JitPack, no /usr/bin/dot
-    enabled = JavaVersion.current().isJava8() && !isJitPackBuild
     
-	options.tagletPath = configurations.javadocTaglets.files as List
-	options.taglets = ["org.jdrupes.taglets.plantUml.Taglet"]
-
+    inputs.file rootProject.file('overview.md')
+    
     classpath = files(rootProject.subprojects
         .findAll({project -> project.name.startsWith("org.jgrapes")})
         .collect {project -> project.sourceSets.main.compileClasspath})
-	source rootProject.subprojects
-		.findAll({project -> project.name.startsWith("org.jgrapes")})
-		.collect {project -> project.sourceSets.main.allJava }
-	options.addStringOption("doctitle", "JGrapes ${project.version}")
-	options.addStringOption("overview", "${rootProject.rootDir}/overview.md")
-	inputs.file "${rootProject.rootDir}/overview.md"
-	options.addBooleanOption("use", true)
-	options.addBooleanOption("linksource", true)
-    if (JavaVersion.current().isJava8()) {
-        options.stylesheetFile(file("${rootProject.rootDir}/misc/stylesheet.css"))
-    }
-	options.addStringOption("bottom", file("${rootProject.rootDir}/misc/javadoc.bottom.txt").text)
-	options.links "https://docs.oracle.com/javase/8/docs/api/"
-    options.links "https://mnlipp.github.io/jdrupes-httpcodec/javadoc/"
-	destinationDir = file("${rootProject.buildDir}/javadoc")
-
+    var sourceDirs = rootProject.subprojects
+        .findAll({project -> project.name.startsWith("org.jgrapes")})
+        .collect{project -> project.sourceSets.main.allJava.getSrcDirs() }
+        .flatten().findAll(dir -> dir.exists())
+    sourceDirs.each { inputs.dir(it) }
+    
+    var destinationDir = file("${rootProject.buildDir}/javadoc")
+    outputs.dir(destinationDir)
+    
+    jvmArgs = ['--add-exports=jdk.javadoc/jdk.javadoc.internal.tool=ALL-UNNAMED']
+    main = 'jdk.javadoc.internal.tool.Main'
+    args = ['-doctitle', "JGrapes ${project.version}",
+        '-use',
+        '-linksource',
+        '-link', 'https://docs.oracle.com/en/java/javase/11/docs/api/',
+        '-link', 'https://mnlipp.github.io/jdrupes-httpcodec/javadoc/',
+        '--add-exports', 'jdk.javadoc/jdk.javadoc.internal.tool=ALL-UNNAMED',
+        '-doclet', 'org.jdrupes.mdoclet.MDoclet',
+        '-docletpath', configurations.markdownDoclet.files.asType(List).join(":"),
+        '--disable-auto-highlight',
+        '-tagletpath', configurations.javadocTaglets.files.asType(List).join(":"),
+        '-taglet', 'org.jdrupes.taglets.plantUml.PlantUml',
+        '-taglet', 'org.jdrupes.taglets.plantUml.StartUml',
+        '-taglet', 'org.jdrupes.taglets.plantUml.EndUml',
+        '-overview', "${rootProject.file('overview.md')}",
+        '-d', destinationDir,
+        '-sourcepath', sourceDirs.join(':'),
+        '-subpackages', 'org.jgrapes',
+        '-verbose',
+        '-bottom', rootProject.file("misc/javadoc.bottom.txt").text,
+        '--allow-script-in-comments',
+        '-Xdoclint:-html',
+        '--add-exports=jdk.javadoc/jdk.javadoc.internal.doclets.formats.html=ALL-UNNAMED'
+        ]
+    
+    ignoreExitValue true
 }
+
 	
